tests/ui/lint/snapshots/unsigned_comparison_byte.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:4:11]
 3 │   let b: byte = 5;
 4 │   let _ = b < 0
   ·           ──┬──
   ·             ╰── an unsigned integer is never negative
 5 │ }
   ╰────
  help: An unsigned integer is never negative, so this comparison always has the same result. Did you mean to compare to a different value? · code: [lint.unsigned_comparison]
