tests/ui/lint/snapshots/unsigned_comparison_named_newtype.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Comparison is always false
   ╭─[test.lis:6:11]
 5 │   let c = Counter(5)
 6 │   let _ = c < 0
   ·           ──┬──
   ·             ╰── an unsigned integer is never negative
 7 │ }
   ╰────
  help: An unsigned integer is never negative, so this comparison always has the same result. Did you mean to compare to a different value? · code: [lint.unsigned_comparison]
