tests/ui/lint/snapshots/unused_constant.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused constant
   ╭─[test.lis:2:7]
 1 │ 
 2 │ const UNUSED_VALUE = 42
   ·       ──────┬─────
   ·             ╰── never used
 3 │ 
   ╰────
  help: Use or remove this constant · code: [lint.unused_constant]
