tests/ui/lint/snapshots/unused_enum.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused type
   ╭─[test.lis:2:6]
 1 │ 
 2 │ enum UnusedColor {
   ·      ─────┬─────
   ·           ╰── never used
 3 │   Red,
   ╰────
  help: Use or remove this type · code: [lint.unused_type]
