tests/ui/lint/snapshots/unused_enum_variant.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused variant
   ╭─[test.lis:4:3]
 3 │   Red,
 4 │   Unused,
   ·   ───┬──
   ·      ╰── never constructed or matched
 5 │ }
   ╰────
  help: Use or remove this enum variant · code: [lint.unused_enum_variant]
